Fix YAML validation status render on mobile
Don't ask about the -3/3, I don't know either how I end up with negative
columns and I. Don't. Care.

--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -822,7 +822,11 @@ body:has(dialog[open])
     td
       &:first-child > span
         display: grid
-        grid-auto-rows: auto
+        justify-content: center
+        grid-template-columns: 1em auto
+
+      .span-title
+        grid-column: -3/3
         text-align: center
 
 .actionable
